--- a/style.css
+++ b/style.css
@@ -19,14 +19,18 @@ body {
 label {
     display: block;
     margin-bottom: 0;
+    font-size: 20px;
 }
 
 input[type="number"] {
-    width: 100px;
-    padding: 8px;
+    width: 200px;
+    padding: 10px;
     margin-bottom: 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    border: 1px solid #d41d1d;
+    border-radius: 10px;
+    text-align: center;
+    font-size: 20px;
+
 }
 
 button {
@@ -36,6 +40,8 @@ button {
     border: none;
     border-radius: 8px;
     cursor: pointer;
+    font-size: 20px;
+    
 }
 
 button:hover {
@@ -45,8 +51,23 @@ button:hover {
 #resultado {
     margin-top: 20px;
     font-weight: bold;
+    font-size: 30px;
+    font-weight: bold;
+        /* Aplica negrita */
+
 }
-#mi-imagen {
-    border: 4px solid rgb(49, 42, 42);
-    /* 5px de grosor, sólido, color rojo */
+
+img {
+    border: 5px solid #0e0f0f;
+    /* Borde azul */
+    border-radius: 10px;
+    /* Bordes redondeados */
+    transition: transform 0.3s ease, border-color 0.5s ease;
+}
+
+img:hover {
+    
+    border-color: #3961d1;
+    /* Borde rojo al pasar el ratón */
+    
 }
